# axumgo

./: Cargo.toml
migrations/: 20231208_create_system_user.sql
src/: main.rs
src/apps/system/: handler.rs  mod.rs  route.rs  serializer.rs  service.rs
src/server/: cache.rs  db.rs  log.rs  mod.rs  response.rs  route.rs  start.rs
