[package]
name = "axumgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
axum = "0.7.2"
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }
redis = "0.24"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"]}
tower-http = { version = "0.5", features = ["trace"] }
tracing-appender = "0.2"
argon2  = "0.5"